# img2cli

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  KNOWN_ISSUES.md  README.md  README_zh.md  ROADMAP.md  config.toml.example  index.html  package-lock.json  package.json  setup.ps1  vite.config.js
.github/workflows/: release.yml
.superpowers/sdd/: progress.md
docs/superpowers/plans/: 2026-07-16-tauri-gui.md  2026-07-16-v0.3.0.md
docs/superpowers/specs/: 2026-07-16-tauri-gui-design.md  2026-07-16-v0.3.0-design.md
src/: App.vue  clipboard.rs  config.rs  daemon.rs  keyboard.rs  main.rs  utils.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  clipboard.rs  config.rs  daemon.rs  injector.rs  main.rs  ssh.rs  ssh_config.rs
