[package]
name = "img2cli"
version = "0.3.5"
edition = "2021"

[dependencies]
arboard = "3.4.1"
rdev = "0.5.3"
enigo = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
chrono = "0.4.38"
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg"] }
notify-rust = "4.11.3"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.29.0", features = ["signal", "process"] }
libc = "0.2.169"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
