[package]
name = "img2cli"
version = "0.3.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
arboard = "3.4.1"
chrono = "0.4.38"
rdev = "0.5.3"
enigo = "0.5.0"
log = "0.4"

[build-dependencies]
tauri-build = "2.0.0"
