[package]
name = "img2cli"
version = "0.3.4"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-dialog = "2.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
arboard = "3.4.1"
chrono = "0.4.38"
rdev = "0.5.3"
enigo = "0.5.0"
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
russh = "0.51"
russh-sftp = "2.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "time"] }

[build-dependencies]
tauri-build = "2.0.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Shell"] }
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

# xcap's Linux backend (PipeWire/libspa) is incompatible with older system
# libspa (Ubuntu 22.04), so screen capture is built for Windows/macOS only.
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
xcap = "0.5"

